--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -6,7 +6,7 @@
     <title></title>
 </head>
 <body>
-    <h1>BAIACA É GAY</h1>
+    <h1>Testando um título</h1>
     <hr>
     <p>
         Testando um  parágrafo
