--- a/exercicios/ex001/index.html
+++ b/exercicios/ex001/index.html
@@ -6,10 +6,10 @@
     <title></title>
 </head>
 <body>
-    <h1>BAIACA É GAY</h1>
+    <h1>Testando um título</h1>
     <hr>
-    <p>BAIACA É VIADO
-        E GOSTA DE DAR O CU
+    <p>
+        Testando um parágrafo
     </p>
     <p>&#x1F449
         &#x1F44C
