--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             background-size: cover;
         }
 
@@ -27,6 +27,10 @@
 <body>
     <main>
         <h1>Teste de Imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto suscipit qui, similique rem nihil consequatur asperiores voluptate animi, ducimus deserunt molestias illo necessitatibus cupiditate voluptas quas voluptatem repellat. Voluptatibus, quos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis adipisci quam sit distinctio animi obcaecati ut modi corporis eaque voluptate, beatae pariatur, ullam, quae expedita atque esse sapiente? Dolores, debitis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus ex qui odit eos saepe architecto accusantium corporis quae, labore eveniet non vel fuga a distinctio voluptas, quo illum impedit obcaecati!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto suscipit qui, similique rem nihil consequatur asperiores voluptate animi, ducimus deserunt molestias illo necessitatibus cupiditate voluptas quas voluptatem repellat. Voluptatibus, quos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis adipisci quam sit distinctio animi obcaecati ut modi corporis eaque voluptate, beatae pariatur, ullam, quae expedita atque esse sapiente? Dolores, debitis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus ex qui odit eos saepe architecto accusantium corporis quae, labore eveniet non vel fuga a distinctio voluptas, quo illum impedit obcaecati!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto suscipit qui, similique rem nihil consequatur asperiores voluptate animi, ducimus deserunt molestias illo necessitatibus cupiditate voluptas quas voluptatem repellat. Voluptatibus, quos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis adipisci quam sit distinctio animi obcaecati ut modi corporis eaque voluptate, beatae pariatur, ullam, quae expedita atque esse sapiente? Dolores, debitis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus ex qui odit eos saepe architecto accusantium corporis quae, labore eveniet non vel fuga a distinctio voluptas, quo illum impedit obcaecati!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto suscipit qui, similique rem nihil consequatur asperiores voluptate animi, ducimus deserunt molestias illo necessitatibus cupiditate voluptas quas voluptatem repellat. Voluptatibus, quos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis adipisci quam sit distinctio animi obcaecati ut modi corporis eaque voluptate, beatae pariatur, ullam, quae expedita atque esse sapiente? Dolores, debitis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus ex qui odit eos saepe architecto accusantium corporis quae, labore eveniet non vel fuga a distinctio voluptas, quo illum impedit obcaecati!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto suscipit qui, similique rem nihil consequatur asperiores voluptate animi, ducimus deserunt molestias illo necessitatibus cupiditate voluptas quas voluptatem repellat. Voluptatibus, quos. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis adipisci quam sit distinctio animi obcaecati ut modi corporis eaque voluptate, beatae pariatur, ullam, quae expedita atque esse sapiente? Dolores, debitis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus ex qui odit eos saepe architecto accusantium corporis quae, labore eveniet non vel fuga a distinctio voluptas, quo illum impedit obcaecati!</p>
     </main>
 </body>
